--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -364,12 +364,12 @@
   </div>
 
   <nav role="navigation" aria-label="Pagination" ng-if="!products.loading" ng-controller="ProductPaginationController">
-    <ul class="pagination horiz-list mrg-dbl--top">
+    <ul class="pagination mrg-dbl--top">
       <li class="pagination__prev">
         <button ng-if="has_prev()" ng-click="prev()" class="pagination__btn btn" rel="prev">Prev<span class="hide-visually">ious page</span></button>
       </li><!--
       --><li>
-        {{page()}} of {{totalPages()}}
+        <span class="hide-visually">page </span>{{page()}} of {{totalPages()}}
       </li><!--
       --><li class="pagination__next">
         <button ng-if="has_next()" ng-click="next()" class="pagination__btn btn" rel="next">Next<span class="hide-visually"> page</span></button>
