Fix up CSS for movies after code review

--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -84,6 +84,9 @@
             @include to-rem(padding-top padding-bottom, $spacing-base);
           }
 
+          &:hover,
+          &:focus {color: $color-link-hover;}
+
           /* When the nav item is the selected section */
           &.is-active {border-bottom-color: $color-brand;}
         }
