Removing js-disabled-hide from stores index/show preloader

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -6,7 +6,7 @@
   <div class="js-pjax-container-stores" aria-live="polite" aria-atomic="true">
 
     <%# PJAX preloader %>
-    <span class="preloader preloader--middle preloader--light js-disabled-hide">
+    <span class="preloader preloader--middle preloader--light">
       <span class="preloader__spinner"></span>
       <em class="hide-visually">Loading, please wait&#8230;</em>
     </span>
