--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -96,7 +96,7 @@
                 <div class="stores-list__store-name">
                   <strong><%= link_to store.name, (centre_store_url @centre.code , store.id), class: 'js-pjax-link-stores' %></strong>
                   <%# Phone no %>
-                  <span class="hide-fully--palm"><%= store.phone_number %></span>
+                  <span class="hide-fully--palm"><span class="hide-visually">Phone number: </span><%= store.phone_number %></span>
                   <%# //Phone no %>
                   <%# [BACKEND] inject this `span` when a category filter has been applied %>
                   <%# <span class="icon icon--pin icon--flush-top"></span> %>
