--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -62,12 +62,11 @@
     /* Hide the preloader by default */
     .preloader {display: none;}
 
-    /* Toggle the display of the preloader and dull out content via the `.is-stores-list-detail-loading` class */
+    /* Toggle the display of the preloader/content via the `.is-stores-list-detail-loading` class */
     &.is-stores-list-detail-loading {
       .preloader {display: block;}
 
-      .stores-maps__inner,
-      + .stores-maps__map {opacity: 0.6;}
+      .stores-maps__inner {display: none;}
     }
   }
 
