Worked movies show and index code in designed layouts.

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
 <% content_for :hero_intro do %>
   <div class="hero__intro">
     <%# [BACKEND] Add link to store details %>
-    <a href="#" class="btn btn--main"><span class="icon icon--store icon--xlrg icon--spacing" aria-hidden="true"></span> Cinema Details</a>
+    <a href="<%= centre_store_path(id: @cinema.id) %>" class="btn btn--main"><span class="icon icon--store icon--xlrg icon--spacing" aria-hidden="true"></span> Cinema Details</a>
   </div>
 <% end %>
 
@@ -13,16 +13,7 @@
     <div class="nav-contextual__clip">
       <div class="nav-contextual__clip__inner">
         <ul class="nav-contextual__list tab__nav horiz-list js-nav-contextual-list">
-          <%# [BACKEND] Need to add <!-- --> between each `li` to remove white space e.g.
-              ```
-              <li>item 1</li><!--
-              --><li>item 2</li><!--
-              --><li>item 3</li>
-              ```
-          %>
-          <% days(@movie_sessions.last['start_time'], @centre.code, params['date']).each do |day| %>
-            <li><%= day %></li>
-          <% end %>
+          <% days(@movie_sessions.last['start_time'], @centre.code, params['date']).each do |day| %><li><%= day %></li><% end %>
         </ul>
       </div>
       <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
@@ -37,7 +28,7 @@
   <%# //Nav contextual %>
 
   <%# List of movies %>
-  <ul class="grid grid--mrg-base-non-palm">
+  <ul class="grid grid--mrg-base-non-palm test-movies">
     <% @movies.each do |movie| %>
       <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
 
@@ -45,13 +36,13 @@
         <article class="tile box" role="article">
           <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id) %>">
             <div class="tile__image">
-              <%# [BACKEND] Use Cloudinary to limit the dimension of the image to be 300x200. Don't need to add `width` and `height` attribute in `img`  as it's responsive site. %>
-              <img src="http://placehold.it/300x200" alt="Screenshot of <%= movie.title %>">
+              <%= cl_image_tag(movie.image_url, alt:"Screenshot of #{movie.title}", width: 300, height: 200 ) %>
             </div>
             <div class="tile__meta">
-              <h3 class="tile__meta__hdr txt-truncate"><%= movie.title %></h3>
+              <h3 class="tile__meta__hdr txt-truncate test-title"><%= movie.title %></h3>
               <%# [BACKEND] Add next session time and output the time as ISO date format (the session time in the movie feed we get) in `datetime` attribute as indicated below %>
-              <p class="tile__meta__desc">Next session at <time datetime="[session time]">[SESSION TIME]</time></p>
+              <%#<p class="tile__meta__desc">Next session at <time datetime="[session time]"> Time.parse(movie.next_session.start_time).strftime("%l:%M %P (%e)") </time></p> %>
+              <p class="tile__meta__desc">View Sessions</p>
             </div>
           </a>
         </article>
