Small date fix for events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,10 +32,10 @@
     <h2 class="detail-view__hdr-sub hn">Event Schedule</h2>
     <dl class="timeline">
       <dt>
-        <%= @event.start '%A' %>
+        <%= @event.date '%A' %>
         <em class="timeline__date">
-          <span><%= @event.start '%-d' %></span>
-          <%= @event.start '%b' %>
+          <span><%= @event.date '%-d' %></span>
+          <%= @event.date '%b' %>
         </em>
       </dt>
       <dd>
