Fixed timeline, enabled cinema link and fix mark up

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -28,27 +28,33 @@
   <%# //Nav contextual %>
 
   <%# List of movies %>
-  <ul class="grid grid--mrg-base-non-palm test-movies">
-    <% @movies.each do |movie| %>
-      <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
+  <%# @movies.in_groups_of(4, false) do |movies|%>
+    <ul class="grid test-movies">
+      <% @movies.each do |movie| %>
+        <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
 
-        <%# Movie tile %>
-        <article class="tile box" role="article">
-          <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id) %>">
-            <div class="tile__image">
-              <%= cl_image_tag(movie.image_url, alt:"Screenshot of #{movie.title}", width: 300, height: 200 ) %>
-            </div>
-            <div class="tile__meta">
-              <h3 class="tile__meta__hdr txt-truncate test-title"><%= movie.title %></h3>
-              <%# [BACKEND] Add next session time and output the time as ISO date format (the session time in the movie feed we get) in `datetime` attribute as indicated below %>
-              <%#<p class="tile__meta__desc">Next session at <time datetime="[session time]"> Time.parse(movie.next_session.start_time).strftime("%l:%M %P (%e)") </time></p> %>
-              <p class="tile__meta__desc">View Sessions</p>
-            </div>
-          </a>
-        </article>
-        <%# //Movie tile %>
+          <%# Movie tile %>
+          <article class="tile box" role="article">
+            <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id) %>">
+              <div class="tile__image">
+                <% if movie.cloudinary_public_id %>
+                  <%= cl_image_tag(movie.cloudinary_public_id, alt:"#{movie.title} picture", width: 568, crop: 'limit', quality: 25, format: 'jpg') %>
+                <% else %>
+                <% end %>
+              </div>
+              <div class="tile__meta">
+                <h3 class="tile__meta__hdr txt-truncate test-title"><%= movie.title %></h3>
+                <%# Not implementing next session time at the moment %>
+                <%# [BACKEND] Add next session time and output the time as ISO date format (the session time in the movie feed we get) in `datetime` attribute as indicated below %>
+                <%#<p class="tile__meta__desc">Next session at <time datetime="[session time]"> Time.parse(movie.next_session.start_time).strftime("%l:%M %P (%e)") </time></p> %>
+                <p class="tile__meta__desc">View Sessions</p>
+              </div>
+            </a>
+          </article>
+          <%# //Movie tile %>
 
-      </li>
-    <% end %>
-  </ul>
+        </li>
+      <% end %>
+    </ul>
+  <%# end %>
   <%# //List of movies %>
