--- a/app/assets/stylesheets/partials/modules/_timeline.scss
+++ b/app/assets/stylesheets/partials/modules/_timeline.scss
@@ -12,7 +12,8 @@
 
 .timeline {
   position: relative;
-  @include to-rem(padding-left, 115);
+  /* Should be even number so it can be divided by 2 which is needed for positioning the line between `timeline__date` */
+  @include to-rem(padding-left, 116);
 
   > dt {
     /* Gives it a bit of spacing between each sets of date */
@@ -26,7 +27,8 @@
     &:first-child {margin-top: 0;}
 
     /* Line connecting `.timeline__date` */
-    &:before {
+    &:before,
+    &:last-of-type ~ dd:before {
       content: "";
       display: block;
       @include to-rem(width, 4);
@@ -46,10 +48,21 @@
     }
 
     /* Hide the line if there's only 1 instance of the date */
-    &:only-of-type:before {
-      display: none;
-    }
+    &:only-of-type:before {display: none;}
 
+    /* For the last `dt`, display a white line from the `dd` to cover up the bottom part of the line coming from `.timeline dt:before` */
+    &:last-of-type ~ dd {
+      position: relative;
+
+      &:before {
+        /* left = padding-left of `.timeline` - position left of `.timeline__date` - (width of `.timeline__date` / 2) - width of `.timeline:before` */
+        @include to-rem(left, -66);
+        /* Needs to match `margin-bottom` of `dd`. This is to shift the line up so it'll cover the the entire line coming from `dt:before` */
+        @include to-rem(top, -($spacing-half));
+        /* Needs to match background that the timeline sits on */
+        background-color: #fff;
+      } 
+    }
   }
 
   /* Start & finish times */
