--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,52 +1,55 @@
-<div class="container container--wide container--dark">
-  <div class="container container--position">
-    <!-- <div class="nav-contextual nav-contextual--dark">
+<div class="section-nav container container--wide container--dark">
+
+  <%# Section nav %>
+  <div class="container">
+    <div class="nav-contextual nav-contextual--dark js-nav-contextual">
       <div class="nav-contextual__clip">
         <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Contextual navigation">
-          <ul class="nav-contextual__list horiz-list">
-            <li>
-              <a class="is-active" href="#">Women's Fashion</a>
-            </li>
-            <li>
-              <a href="#">Men's Fashion</a>
-            </li>
-            <li>
-              <a href="#">Kids</a>
-            </li>
-            <li>
-              <a href="#">Shoes</a>
-            </li>
-            <li>
-              <a href="#">Homewares</a>
-            </li>
+          <ul class="nav-contextual__list horiz-list js-nav-contextual-list">
+            <%# [BACKEND]:
+                - We have to have the HTML comments between each `li`s (top level only) or output them all on 1 line, this is to get around the browser creating unneeded white space.
+                - Class `is-active` needs to be appended to the active `a` i.e. the page the user is on.
+            %>
+            <li><a class="is-active" href="#">Women's Fashion</a></li><!--
+            --><li><a href="#">Men's Fashion</a></li><!--
+            --><li><a href="#">Kids</a></li><!--
+            --><li><a href="#">Shoes</a></li><!--
+            --><li><a href="#">Beauty &amp; Health</a></li><!--
+            --><li><a href="#">Computers &amp; Electronics</a></li><!--
+            --><li><a href="#">Bags &amp; Luggage</a></li>
           </ul>
         </nav>
-        <span class="nav-contextual__clip-overlay icon icon--arrow-right icon--mega icon--flush-top" aria-hidden="true"></span>
+        <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
       </div>
-    </div> -->
-
-    <%# Centre selector %>
-    <div class="centre-selector js-disabled-hide">
-      <div class="centre-selector-control toggle-visibility" id="centre_selector">
-        <label for="centre_select">Show products at</label>
-
-        <select ng-controller="CentreSelectorController"
-                ng-model="selectedCentre"
-                ng-change="selectCentre()"
-                ng-init="selectedCentre='<%= @centre.code %>'"
-                class="nav-contextual__selector"
-                id="centre_select">
-          <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
-          <% # the centre, and its nearby centres %>
-          <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
-          <option value="all">All Centres</option>
-        </select>
-      </div>
-
-      <button toggle-visibility="centre_selector" class="btn btn--main btn--main-alt4 btn--main-compact-icon">
-        <span class="icon icon-ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
-        <span class="hide-visually">Sort centres by</span>
-      </button>
     </div>
+    <%# [FIXME]: this will be initialised globally, just waiting for 'Movies' and 'Opening Hours' pages to be done %>
+    <% content_for :javascript do %>
+      <script>
+        $('.js-nav-contextual').navContextual();
+      </script>
+    <% end -%>
   </div>
+  <%# //Section nav %>
+
+  <%# Centre selector %>
+  <% if @centre.present? %>
+    <div class="section-nav__divider container--wide">
+      <div class="container">
+        <div class="flag flag--shrink-wrap">
+          <div class="flag__image hide-visually">
+            <label for="choose-nearby-centre">Show products at</label>
+          </div>
+          <div class="flag__body">
+            <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="choose-nearby-centre">
+              <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
+              <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
+              <option value="all">All Centres</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+  <%- end -%>
+  <%# //Centre selector %>
+
 </div>
